<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:layout_marginBottom="12dp"
    android:background="@drawable/task_border">


    <TextView
        android:id="@+id/tvName"
        android:layout_marginStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingBottom="4dp" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvDate"
            style="@style/Style1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date"
            android:ellipsize="end"
            android:maxLines="2" />

        <TextView
            android:id="@+id/tvType"
            style="@style/Style1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/type"
            android:ellipsize="end"
            android:maxLines="1" />

        <CheckBox
            android:id="@+id/cbDone"
            style="@style/Style1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>
